# climate

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yaml
src/: clean.rs  config.rs  main.rs  pull.rs  runtime.rs  spec.rs  store.rs
systemd/: climate-update.service  climate-update.timer
